# examples_social_perceptions

./: README.md
face_detector_py/: CMakeLists.txt  package.xml
face_detector_py/config/: perception_conf.yaml
face_detector_py/src/: face_detector.py
speech_recognizer_py/: CMakeLists.txt  package.xml
speech_recognizer_py/config/: perception_conf.yaml
speech_recognizer_py/launch/: bringup_perception.launch
speech_recognizer_py/src/: speech_recognizer.py
static_object_info_publisher/: CMakeLists.txt  package.xml
static_object_info_publisher/config/: object_list.yaml  perception_conf.yaml
static_object_info_publisher/launch/: bringup_publisher.launch
static_object_info_publisher/src/: static_object_info_publisher.py
