<?xml version="1.0"?>
<package format="2">
  <name>speech_recognizer_py</name>
  <version>0.0.0</version>
  <description>The speech_recognizer_py package</description>

  <author email="byeongkyu@gmail.com">Byeong-Kyu Ahn</author>
  <maintainer email="byeongkyu@gmail.com">Byeong-Kyu Ahn</maintainer>

  <license>BSD</license>
  <url type="website">https://github.com/mhri/mhri/wiki</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <depend>mhri_social_msgs</depend>

  <export>
  </export>
</package>
